[package]
name = "bitarray-set"
version = "0.4.0"
authors = ["Alexis Beingessner <a.beingessner@gmail.com>", "Adam Baxter"]
license = "MIT/Apache-2.0"
description = "A set of bits backed by bit-array"
repository = "https://github.com/ambaxter/bit-array-set"
homepage = "https://github.com/ambaxter/bit-array-set"
documentation = "https://contain-rs.github.io/bit-set/bit_set"
keywords = ["data-structures", "bitset", "bitarray"]
readme = "README.md"

[dev-dependencies]
rand = "0.3"

[dependencies]
bit-array = "0.4"
bit-vec = "0.4"
typenum = "1.3"
generic-array = "0.3"

[features]
nightly = []
